{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 125,
  "lineage": "b8b00158-d339-9c85-9516-e72cc8ae6d1a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00dad01950373a8f3",
            "arn": "arn:aws:ec2:us-east-1:103015027822:elastic-ip/eipalloc-00dad01950373a8f3",
            "association_id": "eipassoc-05ec1b027ea680c23",
            "domain": "vpc",
            "id": "eipalloc-00dad01950373a8f3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08eb9c68fc93bdc05",
            "private_dns": "ip-10-0-1-87.ec2.internal",
            "private_ip": "10.0.1.87",
            "public_dns": "ec2-52-3-19-36.compute-1.amazonaws.com",
            "public_ip": "52.3.19.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-nat-eip",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-nat-eip",
              "Project": "vpc-project"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0156001f0548e90b1",
            "arn": "arn:aws:ec2:us-east-1:103015027822:instance/i-07f179bce60114d78",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-ec2-profile",
            "id": "i-07f179bce60114d78",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-038cce246407609ab",
            "private_dns": "ip-10-0-3-24.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bee7479228db18d0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06580c5d289ae19fa",
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-private-app-01",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-private-app-01",
              "Project": "vpc-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-025e44d0008cf03d9"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.private_ec2_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0156001f0548e90b1",
            "arn": "arn:aws:ec2:us-east-1:103015027822:instance/i-0b4c11196fab3a084",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-ec2-profile",
            "id": "i-0b4c11196fab3a084",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f9a62601fda97dda",
            "private_dns": "ip-10-0-1-148.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.148",
            "public_dns": "ec2-3-239-44-166.compute-1.amazonaws.com",
            "public_ip": "3.239.44.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-079b4675433dfe60e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b240532c0cc6c484",
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-public-web-01",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-public-web-01",
              "Project": "vpc-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05edd030906815835"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2_public_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103015027822:internet-gateway/igw-079cba09b65f5544e",
            "id": "igw-079cba09b65f5544e",
            "owner_id": "103015027822",
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-igw",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-igw",
              "Project": "vpc-project"
            },
            "vpc_id": "vpc-0a36f7b336c04fb2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:103015027822:loadbalancer/app/dev-app-alb/ff90e61251bae041",
            "arn_suffix": "app/dev-app-alb/ff90e61251bae041",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-app-alb-1159419074.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:103015027822:loadbalancer/app/dev-app-alb/ff90e61251bae041",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08d3100885b4f9b56"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0066b06bddc2cb2e3"
              },
              {
                "subnet_id": "subnet-0b240532c0cc6c484"
              }
            ],
            "subnets": [
              "subnet-0066b06bddc2cb2e3",
              "subnet-0b240532c0cc6c484"
            ],
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-app-alb",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-app-alb",
              "Project": "vpc-project"
            },
            "vpc_id": "vpc-0a36f7b336c04fb2b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:103015027822:listener/app/dev-app-alb/ff90e61251bae041/13139f3f82a60971",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:103015027822:targetgroup/dev-app-tg/78a99fc5bc51a609",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:103015027822:listener/app/dev-app-alb/ff90e61251bae041/13139f3f82a60971",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:103015027822:loadbalancer/app/dev-app-alb/ff90e61251bae041",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:103015027822:targetgroup/dev-app-tg/78a99fc5bc51a609",
            "arn_suffix": "targetgroup/dev-app-tg/78a99fc5bc51a609",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:103015027822:targetgroup/dev-app-tg/78a99fc5bc51a609",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:103015027822:loadbalancer/app/dev-app-alb/ff90e61251bae041"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-app-tg",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-app-tg",
              "Project": "vpc-project"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a36f7b336c04fb2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00dad01950373a8f3",
            "association_id": "eipassoc-05ec1b027ea680c23",
            "connectivity_type": "public",
            "id": "nat-0f9e629ebb6e288c5",
            "network_interface_id": "eni-08eb9c68fc93bdc05",
            "private_ip": "10.0.1.87",
            "public_ip": "52.3.19.36",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b240532c0cc6c484",
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-nat-gateway",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-nat-gateway",
              "Project": "vpc-project"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03974050038f22a0c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f9e629ebb6e288c5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03974050038f22a0c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-079cba09b65f5544e",
            "id": "r-rtb-0c43292129be4ad201080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c43292129be4ad20",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103015027822:route-table/rtb-03974050038f22a0c",
            "id": "rtb-03974050038f22a0c",
            "owner_id": "103015027822",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f9e629ebb6e288c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-private-rt",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-private-rt",
              "Project": "vpc-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a36f7b336c04fb2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103015027822:route-table/rtb-0c43292129be4ad20",
            "id": "rtb-0c43292129be4ad20",
            "owner_id": "103015027822",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079cba09b65f5544e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-public-rt",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-public-rt",
              "Project": "vpc-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a36f7b336c04fb2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047ca9a49bd76bee9",
            "route_table_id": "rtb-03974050038f22a0c",
            "subnet_id": "subnet-06580c5d289ae19fa"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bb8950e4c3fa917",
            "route_table_id": "rtb-03974050038f22a0c",
            "subnet_id": "subnet-0726868c8fdfbc1c7"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d82a195678ebef5",
            "route_table_id": "rtb-0c43292129be4ad20",
            "subnet_id": "subnet-0b240532c0cc6c484"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063fd88bd7d71d014",
            "route_table_id": "rtb-0c43292129be4ad20",
            "subnet_id": "subnet-0066b06bddc2cb2e3"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103015027822:security-group/sg-08d3100885b4f9b56",
            "description": "ALB security group - allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d3100885b4f9b56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-alb-sg",
            "name_prefix": "",
            "owner_id": "103015027822",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-alb-sg",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-alb-sg",
              "Project": "vpc-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a36f7b336c04fb2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103015027822:security-group/sg-00943812c19915e4f",
            "description": "ASG instances SG - allow HTTP only from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00943812c19915e4f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d3100885b4f9b56"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-asg-sg",
            "name_prefix": "",
            "owner_id": "103015027822",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-asg-sg",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-asg-sg",
              "Project": "vpc-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a36f7b336c04fb2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103015027822:security-group/sg-05edd030906815835",
            "description": "Allow HTTP and SSH (optional) to public EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05edd030906815835",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH (optional)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-public-ec2-sg",
            "name_prefix": "",
            "owner_id": "103015027822",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-public-ec2-sg",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-public-ec2-sg",
              "Project": "vpc-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a36f7b336c04fb2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103015027822:security-group/sg-025e44d0008cf03d9",
            "description": "Allow only internal traffic for private EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025e44d0008cf03d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from inside VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-private-ec2-sg",
            "name_prefix": "",
            "owner_id": "103015027822",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-private-ec2-sg",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-private-ec2-sg",
              "Project": "vpc-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a36f7b336c04fb2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103015027822:subnet/subnet-06580c5d289ae19fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06580c5d289ae19fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103015027822",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-private-subnet-1",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-private-subnet-1",
              "Project": "vpc-project"
            },
            "vpc_id": "vpc-0a36f7b336c04fb2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103015027822:subnet/subnet-0726868c8fdfbc1c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0726868c8fdfbc1c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103015027822",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-private-subnet-2",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-private-subnet-2",
              "Project": "vpc-project"
            },
            "vpc_id": "vpc-0a36f7b336c04fb2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103015027822:subnet/subnet-0b240532c0cc6c484",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b240532c0cc6c484",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "103015027822",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-public-subnet1",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-public-subnet1",
              "Project": "vpc-project"
            },
            "vpc_id": "vpc-0a36f7b336c04fb2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103015027822:subnet/subnet-0066b06bddc2cb2e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0066b06bddc2cb2e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "103015027822",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-public-subnet2",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-public-subnet2",
              "Project": "vpc-project"
            },
            "vpc_id": "vpc-0a36f7b336c04fb2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:103015027822:vpc/vpc-0a36f7b336c04fb2b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae023a4007e42dc0",
            "default_route_table_id": "rtb-0e603b2c7793117d4",
            "default_security_group_id": "sg-0eb84acce2df6af2d",
            "dhcp_options_id": "dopt-0ef48513c24f04969",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a36f7b336c04fb2b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e603b2c7793117d4",
            "owner_id": "103015027822",
            "tags": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-vpc",
              "Project": "vpc-project"
            },
            "tags_all": {
              "Environment": "var.environment",
              "ManagedBy": "Terraform",
              "Name": "dev-vpc",
              "Project": "vpc-project"
            }
          }
        }
      ]
    }
  ]
}